--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 data/do-query.php
+
+/.buildpath
+/.project
+/.settings/.jsdtscope
+/.settings/org.eclipse.php.core.prefs
+/.settings/org.eclipse.wst.jsdt.ui.superType.container
+/.settings/org.eclipse.wst.jsdt.ui.superType.name
